# personal_tools

IELTS & GRE writingPad/: .gitignore  app.py  requirements.txt  setup.bat  start.bat
IELTS & GRE writingPad/static/: script.js  (+1 more)
LeadOS/: .gitignore  AGENTS.md  pyproject.toml  run.bat  run.ps1
LeadOS/app/: __main__.py
LeadOS/app/core/: base.py  config.py  database.py  models.py  schemas.py
LeadOS/app/discovery/: companies.yml  contact_finder.py  queries.yml  search_client.py  web_search.py
LeadOS/app/llm/: client.py  parser.py  prompts.py
LeadOS/app/matching/: matcher.py
LeadOS/app/outreach/: outreach.py
LeadOS/app/research/: agent.py  organization_discovery.py  organization_queries.yml  queries.yml
LeadOS/app/tests/: test_cli.py  test_config.py  test_models.py  test_research.py  test_schemas.py  test_url_validation.py
LeadOS/app/web/: cli.py  server.py
LeadOS/app/web/static/: script.js  style.css
LeadOS/app/web/templates/: base.html  dashboard.html  drafts.html  prospects.html  research_bd.html  research_global.html  research_orgs.html  settings.html
LeadOS/docs/superpowers/plans/: 2026-06-01-freelancing-os-build.md
LeadOS/docs/superpowers/specs/: 2026-06-01-freelancing-os-design.md
LeadOS/experiments/: ddgs_test.py  orcid_test.html  test_fetch.py  test_orcid.py  test_orcid_ddgs.py  test_other.py  test_platforms.py  test_platforms2.py
LeadOS/scripts/: clear_data.py  dry_run.py  scrape_bd.py  smoke.py
ScholarshipOS/: .env.example  .gitignore  Start.bat  config.py  main.py  orchestrator.py  requirements.txt  scratch_redirect_sample.html
(+106 files in other folders)
